# fastapi-hexagonal-demo

./: .env.local  .env.test  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  commintlint.config.js  pyproject.toml  tox.ini
features/pizzas/: add_pizza.feature  adding_pizza.feature  browsing_a_pizza.feature  browsing_pizzas.feature  pizza_unique_name_validation.feature  pizza_validation.feature
src/pizzeria/: kernel.py
src/pizzeria/pizza/application/: commands.py  dto.py  queries.py  services.py
src/pizzeria/pizza/application/commands/: add_pizza.py
src/pizzeria/pizza/application/queries/: get_pizza.py  get_pizzas.py
src/pizzeria/pizza/domain/: errors.py  model.py  repository.py
src/pizzeria/pizza/domain/tests/: test_model.py
src/pizzeria/pizza/infrastructure/: dto.py  models.py  services.py
src/pizzeria/pizza/infrastructure/graphql/: __init__.py  mutations.py  queries.py  types.py
src/pizzeria/pizza/ports/graphql/: schema.py  types.py
src/pizzeria/pizza/ports/graphql/mutations/: add_pizza.py
src/pizzeria/pizza/ports/graphql/queries/: get_pizza.py  get_pizzas.py
src/pizzeria/system/: bus.py  container.py  database.py  logger.py  settings.py
src/pizzeria/system/domain/: errors.py  exception.py
src/pizzeria/system/strawberry/: errors.py  schema.py  types.py
tests/functional/: conftest.py  matchers.py
tests/functional/pizzas/: conftest.py  test_add_pizza.py  test_adding_pizza.py  test_browsing_a_pizza.py  test_browsing_pizzas.py  test_pizza_unique_name_validation.py  test_pizza_validation.py
