[tool.poetry]
name = "pizzeria"
version = "0.1.0"
description = ""
authors = ["Sergio Gómez <decano@gmail.com>"]
license = "EUPL-1.2"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
pydantic = {extras = ["dotenv"], version = "^1.9.2"}
loguru = "^0.6.0"
tortoise-orm = {extras = ["asyncpg", "asyncmy", "asyncodbc"], version = "^0.19.2"}
aerich = "^0.6.3"
ulid-py = "^1.1.0"
strawberry-graphql = "^0.126.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-sugar = "^0.9.5"
pytest-xdist = "^2.5.0"
pytest-asyncio = "^0.19.0"
black = {version = "^22.6.0", allow-prereleases = true}
mypy = "^0.971"
debugpy = "^1.6.3"
pytest-bdd = "^6.0.1"
requests = "^2.28.1"
isort = "^5.10.1"
pylint = "^2.14.5"
pytest-env = "^0.6.2"
nest-asyncio = "^1.5.5"
types-requests = "^2.28.9"
Faker = "^14.1.0"
PyHamcrest = "^2.0.4"
pre-commit = "^2.20.0"

[tool.poetry.scripts]
serve = "pizzeria.kernel:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.aerich]
tortoise_orm = "pizzeria.system.database.ENV"
location = "./migrations"
src_folder = "./."

[tool.pytest.ini_options]
bdd_features_base_dir = "features/"
asyncio_mode = "auto"

[tool.isort]
profile = "black"

[tool.black]
line-length = 110
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
follow_imports = "skip"
plugins = [
  "strawberry.ext.mypy_plugin",
]



[tool.pylint.'MASTER']
# ignore-patterns="^test_.*.py"

[tool.pylint.'FORMAT']
max-line-length=120

[tool.pylint.'MESSAGES CONTROL']
disable=[
  "missing-docstring",
  "invalid-name",
  "redefined-outer-name",
  "too-few-public-methods",
  "redefined-builtin",
]

[tool.pylint.'DESIGN']
max-parents=13


[tool.pylint.'SIMILARITIES']
# Minimum lines number of a similarity.
min-similarity-lines=8
# Ignore comments when computing similarities.
ignore-comments=true
# Ignore docstrings when computing similarities.
ignore-docstrings=false
# Ignore imports when computing similarities.
ignore-imports=true
